Display the decimal separator when pressed, stop overflow of the display

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
 	width: 240px;
 	height: 70px;
 	padding-right: 6px;
+	overflow:hidden;
 	display: flex;
 	justify-content: end;
 	align-items: center;
